# 2022-2023-mlops-fastapi-VanbrabandtTibo

./: Dockerfile  README.md  docker-compose.yml
db/: aria_log_control
db/mysql/: column_stats.MAI  column_stats.frm  columns_priv.MAI  columns_priv.frm  db.MAD  db.MAI  db.frm  event.MAI  event.frm  func.MAI  func.frm  general_log.frm  global_priv.MAD  global_priv.MAI  global_priv.frm  gtid_slave_pos.frm  help_category.MAI  help_category.frm  help_keyword.MAI  help_keyword.frm  help_relation.MAI  help_relation.frm  help_topic.MAI  help_topic.frm  index_stats.MAI  index_stats.frm  innodb_index_stats.frm  innodb_index_stats.ibd  innodb_table_stats.frm  innodb_table_stats.ibd  plugin.MAI  plugin.frm  proc.MAD  proc.MAI  proc.frm  procs_priv.MAI  procs_priv.frm  proxies_priv.MAD  proxies_priv.MAI  proxies_priv.frm  (+21 more)
db/sys/: host_summary.frm  host_summary_by_file_io.frm  host_summary_by_file_io_type.frm  host_summary_by_stages.frm  host_summary_by_statement_latency.frm  host_summary_by_statement_type.frm  innodb_buffer_stats_by_schema.frm  innodb_buffer_stats_by_table.frm  innodb_lock_waits.frm  io_by_thread_by_latency.frm  io_global_by_file_by_bytes.frm  io_global_by_file_by_latency.frm  io_global_by_wait_by_bytes.frm  io_global_by_wait_by_latency.frm  latest_file_io.frm  metrics.frm  (+87 more)
fastapi-env/: pyproject.toml
fastapi-env/fastapi_env/: backend_pre_start.py  database.py  main.py
fastapi-env/fastapi_env/models/: bird_model.py  user_model.py
fastapi-env/fastapi_env/routers/: bird_router.py  user_router.py
fastapi-env/fastapi_env/schemas/: bird.py  user.py
